fixed spacing styling bug and alignment of info

--- a/client/src/components/DiscoverEventsCard/DiscoverEventsCard.scss
+++ b/client/src/components/DiscoverEventsCard/DiscoverEventsCard.scss
@@ -69,16 +69,16 @@
 .eventCategoriesContainer{ 
     // width: 35vw; 
     width: 34vw; 
-    height: 100%; 
+    // height: 100%; 
 
     // background-color: rgb(194, 192, 192);
     // background-color: #e8dfd8cb;
 
     background-color: #ddc9bacb;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    justify-content: center;
+    // display: flex;
+    // align-items: center;
+    // flex-direction: column;
+    // justify-content: center;
     // margin: 20px 0;    
     margin: 5px 20px;    
 
@@ -86,6 +86,13 @@
     border: solid 0.5px black;
     filter: drop-shadow(0 0 1rem rgb(96, 95, 95));
 
+}
+
+.disEventLinks{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    
 }
 
 .hugeContainer{
